--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -55,6 +55,7 @@ set_global_assignment -name VHDL_FILE alu_control.vhd
 set_global_assignment -name VHDL_FILE microcode_rom.vhd
 set_global_assignment -name VHDL_FILE cunit.vhd
 set_global_assignment -name VHDL_FILE iunit.vhd
+set_global_assignment -name VHDL_FILE munit.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
