--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -56,7 +56,15 @@ set_global_assignment -name VHDL_FILE microcode_rom.vhd
 set_global_assignment -name VHDL_FILE cunit.vhd
 set_global_assignment -name VHDL_FILE iunit.vhd
 set_global_assignment -name VHDL_FILE munit.vhd
+set_global_assignment -name VHDL_FILE mipsmpu.vhd
+set_global_assignment -name VHDL_FILE sub.vhd
+set_global_assignment -name VHDL_FILE fulladd.vhd
+set_global_assignment -name VHDL_FILE somador.vhd
+set_global_assignment -name VHDL_FILE portOR.vhd
+set_global_assignment -name VHDL_FILE portAND.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE slt.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE alu.vhd
