--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -49,7 +49,6 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name VHDL_FILE MIPS.vhd
-set_global_assignment -name VHDL_FILE single_port_ram.vhd
 set_global_assignment -name VHDL_FILE mux4.vhd
 set_global_assignment -name VHDL_FILE alu_control.vhd
 set_global_assignment -name VHDL_FILE microcode_rom.vhd
@@ -75,4 +74,5 @@ set_global_assignment -name VHDL_FILE registers.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE single_port_ram_with_init.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
